Fix header not showing when it should

--- a/web/style.css
+++ b/web/style.css
@@ -188,7 +188,7 @@ hgroup.search-animation {
     }
 }
 
-main:has(.results)>hgroup.search-animation {
+main:has(.result)>hgroup.search-animation {
     height: 0;
 }
 
